--- a/build.xml
+++ b/build.xml
@@ -14,6 +14,7 @@
     <pathelement location="${gwt.sdk}/validation-api-1.0.0.GA-sources.jar"/>
     <pathelement location="${gwt.sdk}/gxt-3.1.1.jar" />
     <pathelement location="${gwt.sdk}/gxt-theme-neptune-3.1.0.jar" />
+    <pathelement location="${gwt.sdk}/mysql-connector-java-5.0.8-bin.jar" />
     <fileset dir="war/WEB-INF/lib" includes="**/*.jar"/>
     <!-- Add any additional non-server libs (such as JUnit) here -->
   </path>
@@ -22,6 +23,7 @@
     <mkdir dir="war/WEB-INF/lib" />
     <copy todir="war/WEB-INF/lib" file="${gwt.sdk}/gwt-servlet.jar" />
     <copy todir="war/WEB-INF/lib" file="${gwt.sdk}/gwt-servlet-deps.jar" />
+    <copy todir="war/WEB-INF/lib" file="${gwt.sdk}/mysql-connector-java-5.0.8-bin.jar" />
     <!-- Add any additional server libs that need to be copied -->
   </target>
 
