--- a/build.xml
+++ b/build.xml
@@ -46,6 +46,10 @@
       <arg line="-war"/>
       <arg value="war"/>
       <!-- Additional arguments like -style PRETTY or -logLevel DEBUG -->
+      <arg line="-localWorkers" />
+      <arg value="1" />
+      <arg line="-optimize" />
+      <arg value="0" />
       <arg line="${gwt.args}"/>
       <arg value="com.google.lecture_manager.LectureManager"/>
     </java>
