Add upload files functionality.

--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -18,6 +18,10 @@
         <servlet-name>com.google.lecture_manager.LectureManager InitService</servlet-name>
         <servlet-class>com.google.lecture_manager.server.InitServiceImpl</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>lectureUploadService</servlet-name>
+        <servlet-class>com.google.lecture_manager.server.LectureUploadService</servlet-class>
+    </servlet>
 
     <servlet-mapping>
         <servlet-name>com.google.lecture_manager.LectureManager UserService</servlet-name>
@@ -30,6 +34,10 @@
     <servlet-mapping>
         <servlet-name>com.google.lecture_manager.LectureManager InitService</servlet-name>
         <url-pattern>/lecturemanager/initService</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>lectureUploadService</servlet-name>
+        <url-pattern>/lecturemanager/lectureUploadService</url-pattern>
     </servlet-mapping>
 
     <!-- Default page to serve -->
